force-app/main/default/objects/Pipeline_Review__c/Pipeline_Review__c.object-meta.xml
<CustomObject>
    <description>Tracking tool to enable managers to tell when they reviewed their team&apos;s pipeline.</description>
    <label>Pipeline Review</label>
    <nameField>
        <label>Business Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>