force-app/main/default/objects/Pipeline_Review__c/fields/Account_Reassignments__c.field-meta.xml
<CustomField>
    <fullName>Account_Reassignments__c</fullName>
    <description>Is the Sales Process being followed for all reassigned accounts?</description>
    <inlineHelpText>Review of small accounts or targets identified by Acct Reassignment process and also follow-up on previously reassigned accounts.</inlineHelpText>
    <label>Account Reassignments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>