force-app/main/default/objects/Pipeline_Review__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <inlineHelpText>Capture any action items from the meeting</inlineHelpText>
    <label>Action Items</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>