force-app/main/default/objects/Pipeline_Review__c/fields/Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>Active_Leads__c</fullName>
    <inlineHelpText>Are unread addressed and do rep-generated leads fit the Go-To-Market Strategy?</inlineHelpText>
    <label>zzActive Leads</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>