force-app/main/default/objects/Pipeline_Review__c/fields/AR_Data__c.field-meta.xml
<CustomField>
    <fullName>AR_Data__c</fullName>
    <inlineHelpText>Are there AR issues? If so identify next steps.</inlineHelpText>
    <label>zzAR Data</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>