force-app/main/default/objects/Pipeline_Review__c/fields/Created_Before_LEX_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_Before_LEX_Conversion__c</fullName>
    <description>Reporting field to display trending of whether or not Pipeline Reviews were created before or after lightning conversion. This field intended to be used with PARENTGROUPVAL and PREVGROUPVAL in summary reporting. Field value will always be the opposite of &quot;Created Post LEX Conversion&quot;.</description>
    <formula>IF( Created_Post_LEX_Conversion__c ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzCreated Before LEX Conversion</label>
    <type>Checkbox</type>
</CustomField>