force-app/main/default/objects/Pipeline_Review__c/fields/Created_Post_LEX_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_Post_LEX_Conversion__c</fullName>
    <description>Modified by Kevin 5/30 to use the PSR User rather than the creator since the creator is the manager and not the subject</description>
    <formula>IF( DATEVALUE(CreatedDate ) &gt;=   Primary_Sales_Rep__r.SF_userid__r.Lightning_Conversion_Date__c  , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzCreated Post LEX Conversion</label>
    <type>Checkbox</type>
</CustomField>