force-app/main/default/objects/Pipeline_Review__c/fields/Customer_Business_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Reviews__c</fullName>
    <inlineHelpText>Document any completed CBRs and outcomes or planned meetings</inlineHelpText>
    <label>Customer Business Reviews</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>