force-app/main/default/objects/Pipeline_Review__c/fields/Customer_Dedicated_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dedicated_Inventory__c</fullName>
    <inlineHelpText>Review % Current and % Dead/Dying</inlineHelpText>
    <label>Working Capital - AR and CDI</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>