force-app/main/default/objects/Pipeline_Review__c/fields/Last_Month_Business_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Business_Review__c</fullName>
    <inlineHelpText>Were the action items from last month completed?</inlineHelpText>
    <label>Last Month Business Review</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>