force-app/main/default/objects/Pipeline_Review__c/fields/Last_Month_s_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_s_Action_Items__c</fullName>
    <inlineHelpText>carryover from last review to follow-up on activity</inlineHelpText>
    <label>Last Month&apos;s Action Items</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>