force-app/main/default/objects/Pipeline_Review__c/fields/Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Lost_Opportunities__c</fullName>
    <inlineHelpText>What could have been done differently?</inlineHelpText>
    <label>zzLost Opportunities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>