force-app/main/default/objects/Pipeline_Review__c/fields/Margin_Data__c.field-meta.xml
<CustomField>
    <fullName>Margin_Data__c</fullName>
    <inlineHelpText>Are there margin issues?</inlineHelpText>
    <label>zzMargin Data</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>