force-app/main/default/objects/Pipeline_Review__c/fields/Month_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Month_Reviewed__c</fullName>
    <inlineHelpText>Choose the month that this review covered (could be current or previous month).</inlineHelpText>
    <label>Month Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Jan</fullName>
            </value>
            <value>
                <fullName>2 - Feb</fullName>
            </value>
            <value>
                <fullName>3 - Mar</fullName>
            </value>
            <value>
                <fullName>4 - Apr</fullName>
            </value>
            <value>
                <fullName>5 - May</fullName>
            </value>
            <value>
                <fullName>6 - June</fullName>
            </value>
            <value>
                <fullName>7 - July</fullName>
            </value>
            <value>
                <fullName>8 - Aug</fullName>
            </value>
            <value>
                <fullName>9 - Sept</fullName>
            </value>
            <value>
                <fullName>10 - Oct</fullName>
            </value>
            <value>
                <fullName>11 - Nov</fullName>
            </value>
            <value>
                <fullName>12 - Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>