force-app/main/default/objects/Pipeline_Review__c/fields/New_Accounts_Prospects_Leads__c.field-meta.xml
<CustomField>
    <fullName>New_Accounts_Prospects_Leads__c</fullName>
    <inlineHelpText>Review new account activity and Prospecting 2.0 activity (Promos and campaign enrollment)</inlineHelpText>
    <label>New Accounts/Prospects/Leads</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>