force-app/main/default/objects/Pipeline_Review__c/fields/OpenOpps_and_Sales_Team_Opps__c.field-meta.xml
<CustomField>
    <fullName>OpenOpps_and_Sales_Team_Opps__c</fullName>
    <inlineHelpText>Review volume, # opps, 30 day adds, Past dues, Stage durations, opp age, status updates, activity, SOW, etc.  Discuss key opps and activity/resources needed to advance stage to Close.</inlineHelpText>
    <label>Pipeline Health and Key Opportunities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>