force-app/main/default/objects/Pipeline_Review__c/fields/Pipeline_Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Quality_Rating__c</fullName>
    <inlineHelpText>General rating from the meeting on the quality and velocity of the pipeline to drive growth.</inlineHelpText>
    <label>Pipeline Quality Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Off Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>