force-app/main/default/objects/Pipeline_Review__c/fields/Pipeline_Review_Component__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Review_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Built By BW March 2018</description>
    <label>Pipeline Review Component</label>
    <type>Checkbox</type>
</CustomField>