force-app/main/default/objects/Pipeline_Review__c/fields/PipelineReviewCounter__c.field-meta.xml
<CustomField>
    <fullName>PipelineReviewCounter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Review Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>