force-app/main/default/objects/Pipeline_Review__c/fields/Pref_Supplier_And_Private_Brand_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Pref_Supplier_And_Private_Brand_Adoption__c</fullName>
    <inlineHelpText>Does pipeline reflect preferred suppliers and private brands?</inlineHelpText>
    <label>zzPref Supplier And Private Brand Adopti</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>