force-app/main/default/objects/Pipeline_Review__c/fields/Primary_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Email__c</fullName>
    <inlineHelpText>DO NOT EDIT THIS FIELD.  This field is used to send a copy of the pipeline review to the Primary Sales Rep it relates to.</inlineHelpText>
    <label>Primary Sales Rep Email</label>
    <type>Email</type>
</CustomField>