force-app/main/default/objects/Pipeline_Review__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <formula>1.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordCount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>