force-app/main/default/objects/Pipeline_Review__c/fields/Reporting_PSR_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_PSR_First_Name__c</fullName>
    <description>Built as a reporting field for Lightning</description>
    <formula>Primary_Sales_Rep__r.Owner:User.FirstName</formula>
    <label>Reporting - PSR - First Name</label>
    <type>Text</type>
</CustomField>