force-app/main/default/objects/Pipeline_Review__c/fields/Reporting_PSR_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_PSR_Last_Name__c</fullName>
    <formula>Primary_Sales_Rep__r.Owner:User.LastName</formula>
    <label>Reporting - PSR - Last Name</label>
    <type>Text</type>
</CustomField>