force-app/main/default/objects/Pipeline_Review__c/fields/Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Review_Summary__c</fullName>
    <inlineHelpText>Provide overall summary comments from meeting</inlineHelpText>
    <label>Summary Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>