force-app/main/default/objects/Pipeline_Review__c/fields/Sales_Data__c.field-meta.xml
<CustomField>
    <fullName>Sales_Data__c</fullName>
    <inlineHelpText>document month and YTD results to plan</inlineHelpText>
    <label>Sales &amp; Margin Results to Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>