force-app/main/default/objects/Pipeline_Review__c/fields/Sales_Process_And_Lightning_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process_And_Lightning_Adoption__c</fullName>
    <inlineHelpText>Is there adoption to the Sales Process and Salesforce Lightning?</inlineHelpText>
    <label>zzSales Process And Lightning Adoption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doing Great</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Not Adopting</fullName>
            </value>
            <value>
                <fullName>Showing Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>