force-app/main/default/objects/Pipeline_Review__c/fields/Specialists_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Specialists_Engagement__c</fullName>
    <inlineHelpText>Evaluate level specialist engagement or key opps</inlineHelpText>
    <label>Specialists Engagement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>