force-app/main/default/objects/Pipeline_Review__c/fields/What_s_Your_5_Whales__c.field-meta.xml
<CustomField>
    <fullName>What_s_Your_5_Whales__c</fullName>
    <label>5 Whales - Update</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>