force-app/main/default/objects/Pipeline_Review__c/fields/Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunities__c</fullName>
    <inlineHelpText>What went well on won opportunities?</inlineHelpText>
    <label>zzWon Opportunities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>