force-app/main/default/objects/Pipeline_Review__c/listViews/All_Pipeline_Reviews.listView-meta.xml
<ListView>
    <fullName>All_Pipeline_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Month_Reviewed__c</columns>
    <columns>Primary_Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Reviews</label>
</ListView>